# lambda-rust-weatherstation-demo

./: Cargo.toml  Makefile  README.md  template.yaml
src/: main.rs
test_data/: Readme.md  python_lambda.py  weatherstation_data_populate.py
tests/: generator.js  load-test.yml
