[package]
name = "weatherstation_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.5"
#rand = "0.8.3"
serde_json = "1"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"     
lambda_http = "0.5"
aws-config = "0.11.0"
aws-sdk-dynamodb = "0.11.0"
aws-sdk-s3 = "0.11.0"
url = "2.2.2"

[dev-dependencies]
aws-smithy-http = "0.38"
aws-types = { version = "0.8", features = ["hardcoded-credentials"] }
http = "0.2"